# ActionEngine

./: .gitignore  CMakeLists.txt  CubeSphere.prefab  PrefabCube.prefab  README.md  build.bat  compile_shaders.bat  engine_log.txt  git_sync.bat  imgui.ini
assets/: README.md
assets/models/: InnaPrototype.mtl  README.md
engine/: engine.cpp  engine.h
engine/assets/: CMakeLists.txt  asset_hot_reloader.cpp  asset_hot_reloader.h  asset_importer.cpp  asset_importer.h  asset_manager.cpp  asset_manager.h
engine/audio/: CMakeLists.txt  audio.cpp  audio.h
engine/core/: CMakeLists.txt  logging.cpp  logging.h  profiler.cpp  profiler.h  types.h
engine/core/containers/: sparse_set.h
engine/core/jobs/: job_system.cpp  job_system.h
engine/core/math/: math.cpp  math.h
engine/core/memory/: allocators.cpp  allocators.h
engine/editor/: CMakeLists.txt  editor.cpp  editor.h  imgui_renderer.cpp  imgui_renderer.h
engine/editor/commands/: CMakeLists.txt  command.cpp  command.h  editor_commands.cpp  editor_commands.h
engine/editor/panels/: console_panel.cpp  console_panel.h  gizmo_panel.cpp  gizmo_panel.h  inspector_panel.cpp  inspector_panel.h  multi_viewport_panel.cpp  multi_viewport_panel.h  scene_tree_panel.cpp  scene_tree_panel.h  viewport_panel.cpp  viewport_panel.h
engine/editor/prefabs/: prefab.cpp  prefab.h
engine/editor/shader_graph/: shader_graph.cpp  shader_graph.h  shader_graph_editor.cpp  shader_graph_editor.h
engine/gameplay/: CMakeLists.txt
engine/gameplay/ecs/: ecs.cpp  ecs.h
engine/input/: CMakeLists.txt  input.h  input_map.cpp  input_map.h
engine/physics/: CMakeLists.txt  character_controller.cpp  character_controller.h  collision_shapes.h  physics.cpp  physics.h  physics_world.cpp  physics_world.h
engine/physics/jolt/: jolt_debug_renderer.cpp  jolt_debug_renderer.h  jolt_layers.h  jolt_physics.cpp  jolt_physics.h
engine/platform/: CMakeLists.txt  platform.cpp  platform.h
engine/platform/vulkan/: vulkan_context.cpp  vulkan_context.h  vulkan_device.cpp  vulkan_device.h  vulkan_swapchain.cpp  vulkan_swapchain.h
engine/project/: CMakeLists.txt  project.cpp  project.h  scene_serializer.cpp  scene_serializer.h
engine/render/: CMakeLists.txt  renderer.cpp  renderer.h
engine/render/culling/: frustum_culling.cpp  frustum_culling.h
engine/render/lod/: lod_system.cpp  lod_system.h
engine/resources/: CMakeLists.txt  resource.cpp  resource.h  resource_cache.cpp  resource_cache.h  resource_loader.cpp  resource_loader.h  resource_types.cpp  resource_types.h  resources.h
engine/scene/: CMakeLists.txt  node.cpp  node.h  node_3d.cpp  node_3d.h  scene.h  scene_tree.cpp  scene_tree.h
engine/scripting/: CMakeLists.txt  builtin_scripts.h  script.cpp  script.h  script_system.cpp  script_system.h
engine/serialization/: CMakeLists.txt  json_format.cpp  json_format.h  serialization.cpp  serialization.h  serialization_system.h
engine/world/: CMakeLists.txt  world_manager.cpp  world_manager.h
game/: OriginalScene.aescene  main.cpp
game/NewProject/: NewProject.aeproj
game/TestProject/: TestProject.aeproj
scripts/: git-finish-feature.ps1  git-hotfix.ps1  git-start-feature.ps1  git-start-release.ps1  git-status.ps1
shaders/: forward.frag  forward.vert  fxaa.frag  fxaa.vert  grid.frag  grid.vert  skybox.frag  skybox.vert
shaders/compiled/: README.md
tests/: CMakeLists.txt
tests/e2e/: CMakeLists.txt  test_engine_lifecycle.cpp
tests/integration/: CMakeLists.txt  test_ecs_systems.cpp  test_physics_world.cpp
tests/unit/: CMakeLists.txt  test_ecs.cpp  test_logging.cpp  test_math.cpp  test_types.cpp
